--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hubot-business-cat": "^1.1.11",
     "hubot-darts": "^1.0.1",
     "hubot-diagnostics": "0.0.1",
+    "hubot-dogeme": "^1.0.0",
     "hubot-fliptable": "^1.2.0",
     "hubot-google-images": "^0.1.2",
     "hubot-google-translate": "^0.1.0",
