--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Dalton Dick <daltondick2010@gmail.com>",
   "description": "A simple helpful robot for your Legion of Done",
   "dependencies": {
-    "hubot": "^2.11.0",
+    "hubot": "^2.18.0",
     "hubot-baseball": "^1.0.1",
-    "hubot-business-cat": "^1.2.4",
+    "hubot-business-cat": "^1.5.0",
     "hubot-darts": "^1.0.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-dogeme": "^1.0.0",
     "hubot-fliptable": "^1.2.0",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
-    "hubot-help": "^0.1.1",
-    "hubot-heroku-keepalive": "1.0.0",
+    "hubot-help": "^0.1.3",
+    "hubot-heroku-keepalive": "1.0.2",
     "hubot-maps": "0.0.2",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
@@ -27,6 +27,7 @@
     "hubot-youtube": "^1.0.1"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "5.5.0",
+    "npm": "3.7.2"
   }
 }
