--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Dalton Dick <daltondick2010@gmail.com>",
   "description": "A simple helpful robot for your Legion of Done",
   "dependencies": {
+    "coffee-script": "^1.10.0",
     "hubot": "^2.18.0",
     "hubot-baseball": "^1.0.1",
     "hubot-business-cat": "^1.5.0",
