Properly increase node & npm version

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hubot-youtube": "^1.0.1"
   },
   "engines": {
-    "node": "^5.5.0",
-    "npm": "^3.7.3"
+    "node": ">=5.5.0",
+    "npm": ">=3.7.3"
   }
 }
